Changelog 2021 Jan 26:
    -Generic 'BasicBot will restart for an update soon!' message added
    -Customizable !basic_announce [PASSWORD] "[MESSAGE]" command added
    -Channel command responses edited: BasicBot responds in channels starting with 'bot' or named 'basicbot'

Changelog 2021 Jan 25:
    -BasicBot was deployed to AWS today.
    -On Voice State Update no longer throws an error

Changelog 2021 Jan 24:
    -!basic_terminate replaces !basicbot_terminate
    -Message and command interpretation speed improved
    -Instead of using force-delete-ids.txt, the bot removes new messages in channels named 'official-complaints'
    -Fixed and optimized 'noot'
    -Audio encoding has returned to PCM/MP3 for better volume balancing
    -CPU usage is higher this way, but the volume balancing is better
    -Fixed issue where moving between two BasicBot enabled voice chats prevents a leave message from being sent
    -!basic_leave allows the bot to play non-song audio upon rejoining
    
Changelog 2021 Jan 22:
    -Audio encoding has been migrated to Opus instead of MP3 for lower CPU usage
    -The audio caches are now merged, meaning the bot can queue/play songs considerably faster if they're already cached.
    -The audio cache can now be deleted via the bot owner's DMs
    -Songs with their files deleted will now redownload the file rather than throwing an error
    
Changelog 2021 Jan 21:
    -Bot commands only register in channels starting with 'bot', 'basic', or user DMs. force-delete channels are still deleted.
    -Youtube audio caching optimized, the bot will no longer redownload audio files.
    -Two new easter eggs, including a new sound for when the bot joins (occurs only when audio is not queued)
    -Youtube audio requests now have a maximum time: 1 hour (+1 minute allowed). Requests over 1 hour will not be queued/played
    
Changelog 2021 Jan 20:
    -Each server stores its queue in a separate folder