@@ -1,3 +1,8 @@
+Changelog 2021 Jan 28:
+    -Added command alias: !basic_add for !basic_queue
+    -Added command alias: !basic_next for !basic_skip
+    -!basic_play now can do !basic_yt's job too (provided there's nothing playing).
+
 Changelog 2021 Jan 26:
     -Generic 'BasicBot will restart for an update soon!' message added
     -Customizable !basic_announce [PASSWORD] "[MESSAGE]" command added
